# libwandevent

./: .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README  bootstrap.sh  configure.ac  epollhelper.c  epollhelper.h  event.c  gitlab-build-rpm.sh  libwandevent.h  selecthelper.c  selecthelper.h
debian/: changelog  control  copyright  libwandevent-dev.manpages  libwandevent.3  rules
rpm/: libwandevent.spec
